--- a/index.html
+++ b/index.html
@@ -115,108 +115,98 @@
         </section>
         
         <section class="section team">
-            <div class="team__wrapper">
+<div class="team__box">
+        <h2 class="section__title section__title_team">команда</h2>
+    <ul class="team__list">
+        <li class="team__item">
+            <a href="#" class="team__trigger">Ричард Джеймс</a>
+            <div class="team__content-wrap">
                 <div class="team__content">
-                    <h2 class="section__title section__title_team">команда</h2>
-                    <div class="accordeon-team">
-                        <ul class="accordeon__list">
-                            <li class="accordeon__item">
-                                <a href="" class="teammate__name ">дэниэл редклиф</a>
-                                <div class="teammate__info ">
-                                    <div class="teammate__icon">
-                                    </div>
-                                    <div class="teammate__desc">
-                                        <div class="teammate__pro">Оператор</div>
-                                        <div class="teammate__text">
-                                            <p>С радостью поможем подобрать идеальный бургер и оформить заказ.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="accordeon__item accordeon__item_active">
-                                <a href="" class="teammate__name">ричард джеймс</a>
-                                <div class="teammate__info">
-                                    <div class="teammate__icon">
-                                    </div>
-                                    <div class="teammate__desc">
-                                        <div class="teammate__prof">Оператор</div>
-                                        <div class="teammate__text">
-                                            <p>С радостью поможем подобрать идеальный бургер и оформить заказ.</p>
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </li>
-                            <li class="accordeon__item">
-                                <a href="" class="teammate__name ">джейк финн</a>
-                                <div class="teammate__info ">
-                                    <div class="teammate__icon">
-                                    </div>
-                                    <div class="teammate__desc">
-                                        <div class="teammate__prof">Оператор</div>
-                                        <div class="teammate__text">
-                                            <p>С радостью поможем подобрать идеальный бургер и оформить заказ.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="accordeon__item">
-                                <a href="" class="teammate__name ">николай иванов</a>
-                                <div class="teammate__info ">
-                                    <div class="teammate__icon">
-                                    </div>
-                                    <div class="teammate__desc">
-                                        <div class="teammate__prof">Оператор</div>
-                                        <div class="teammate__text">
-                                            <p>С радостью поможем подобрать идеальный бургер и оформить заказ.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
+                    <div class="team__photo">
+                        <img src="img/team_page/team1.jpg" alt="" class="team__img">
+                    </div>
+                    <div class="team__description">
+                        <div class="team__ocup">Оператор</div>
+                        <div class="team__text">С радостью поможем подобрать идеальный бургер и оформить заказ.</div>
                     </div>
                 </div>
-
             </div>
-        </section>
+        </li>
+        <li class="team__item team__item--active">
+                <a href="#" class="team__trigger">Ричард Джеймс</a>
+                <div class="team__content-wrap">
+                    <div class="team__content">
+                        <div class="team__photo">
+                            <img src="img/team_page/team1.jpg" alt="" class="team__img">
+                        </div>
+                        <div class="team__description">
+                            <div class="team__ocup">Оператор</div>
+                            <div class="team__text">С радостью поможем подобрать идеальный бургер и оформить заказ.</div>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="team__item">
+                    <a href="#" class="team__trigger">Ричард Джеймс</a>
+                    <div class="team__content-wrap">
+                        <div class="team__content">
+                            <div class="team__photo">
+                                <img src="img/team_page/team1.jpg" alt="" class="team__img">
+                            </div>
+                            <div class="team__description">
+                                <div class="team__ocup">Оператор</div>
+                                <div class="team__text">С радостью поможем подобрать идеальный бургер и оформить заказ.</div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="team__item">
+                        <a href="#" class="team__trigger">Ричард Джеймс</a>
+                        <div class="team__content-wrap">
+                            <div class="team__content">
+                                <div class="team__photo">
+                                    <img src="img/team_page/team1.jpg" alt="" class="team__img">
+                                </div>
+                                <div class="team__description">
+                                    <div class="team__ocup">Оператор</div>
+                                    <div class="team__text">С радостью поможем подобрать идеальный бургер и оформить заказ.</div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+    </ul>
+</div>
+</section>
 
         <section class="section menu">
-
-            <h2 class="section__title section-title--white section-title--menu">Меню</h2>
-            <ul class="menu__accordion">
-              <li class="menu__item is-active">
-                <a href="#" class="menu__link" style="background-image: url(img/menu_page/bg1.jpg);">
-                  <span class="menu__title">Для мясоедов</span>
+                <h2 class="section__title section-title--menu">Меню</h2>
+           <ul class="menu__list">
+               <li class="menu__item menu__item--active">
+                   <a href="#" class="menu__trigger" style="background-image: url(img/menu_page/bg1.jpg)">
+                       <span class="menu__title">Для мясоедов</span>
+                   </a>
+                   <div class="menu__content">
+                       <p class="menu__text">Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И. Гальперин, пространственно выбирает метр. Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.</p>
+                   </div>
+               </li>
+               <li class="menu__item">
+                <a href="#" class="menu__trigger" style="background-image: url(img/menu_page/bg2.jpg)">
+                    <span class="menu__title">Вегетарианское</span>
                 </a>
                 <div class="menu__content">
-                  <div class="menu__text">
-                    <p>Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И. Гальперин, пространственно выбирает метр. Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.</p>
-                  </div>
+                    <p class="menu__text">Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И. Гальперин, пространственно выбирает метр. Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.</p>
                 </div>
-              </li>
-              <li class="menu__item">
-                <a href="#" class="menu__link" style="background-image: url(img/menu_page/bg2.jpg);">
-                  <span class="menu__title">Вегетарианское</span>
+            </li>
+            <li class="menu__item">
+                <a href="#" class="menu__trigger" style="background-image: url(img/menu_page/bg3.jpg)">
+                    <span class="menu__title">Диетическое</span>
                 </a>
                 <div class="menu__content">
-                  <div class="menu__text">
-                    <p>Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И. Гальперин, пространственно выбирает метр. Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.</p>
-                  </div>
+                    <p class="menu__text">Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И. Гальперин, пространственно выбирает метр. Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.</p>
                 </div>
-              </li>
-              <li class="menu__item">
-                <a href="#" class="menu__link" style="background-image: url(img/menu_page/bg3.jpg);">
-                  <span class="menu__title">Диетическое</span>
-                </a>
-                <div class="menu__content">
-                  <div class="menu__text">
-                    <p>Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И. Гальперин, пространственно выбирает метр. Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.</p>
-                  </div>
-                </div>
-              </li>
-            </ul>
-    
-          </section>
+            </li>
+           </ul>
+         </section>
 <section class="section reviews">
     <ul class="review__list">
     <li class="review__item">
